--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.11.2",
+    "tesseract.js": "^4.0.6",
     "yup": "^1.2.0"
   },
   "devDependencies": {
